--- a/src/components/layout/Layout.module.scss
+++ b/src/components/layout/Layout.module.scss
@@ -2,7 +2,9 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  width: 80vh;
+  @media (max-width: 500px) {
+    width: 80vh;
+  }
 }
 
 .main {
