--- a/src/components/features/ImageLoader/ImageLoader.module.scss
+++ b/src/components/features/ImageLoader/ImageLoader.module.scss
@@ -8,6 +8,9 @@
   position: relative;
   box-shadow: $shadow;
   border-radius: 3px;
+  @media screen and (max-width: 768px) {
+    width: 100vw;
+  }
   .nextImg {
     object-fit: cover;
   }
